# keyvalue

./: .gitignore  README.md  compose.yaml  keyvalue-app.service
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
front_end/: index.html  post-script.js  styles.css
front_end/all-pages/: header-html.js  header-script.js  styles.css
front_end/global/: style.css
front_end/pages/: create-account-script.js  create-account.html  index-script.js  set-get-page-style.css  set-get-page.html  set-get-script.js
frontend/: index.html
frontend/global/: header-html.js  header-script.js  pre-script.js
frontend/pages/: index-script.js
nginx/conf/: nginx.conf
