[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["John Giorshev <johngiorshev@gmail.com>"]

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.152", features = ["derive"] }
actix-web = "4.2.1"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
]
